# academiclm

./: .gitignore  README.md  main.py  pyproject.toml
data/: pond_results.csv  pond_results.npz  pond_results_validated.csv
examples/: results.ipynb
src/paperlm/: __init__.py  contextlm.py
src/scholarlm/: __init__.py  contextlm.py  documents.py  measurementlm.py  utils.py
tests/: test_contextlm.py
validation/: validate.py
