[project]
dependencies = ["nnsight==0.5.8", "dotenv>=0.9.9,<0.10"]
name = "paperlm"
requires-python = ">= 3.11"
version = "0.1.0"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
paperlm = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = "3.12.4.*"
pandas = ">=2.3.3,<3"
