[project]
name = "scholarlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "jupyter>=1.1.1",
    "langchain-text-splitters>=1.0.0",
    "nnsight>=0.5.9",
    "pandas>=2.3.3",
    "streamlit>=1.50.0",
    "tiktoken>=0.12.0",
    "vllm>=0.11.0",
]

[project.scripts]
scholarlm = "scholarlm:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
